fix buttons and inputs alignment

--- a/public/sass/mainpage/components/header/_controls.scss
+++ b/public/sass/mainpage/components/header/_controls.scss
@@ -1,7 +1,6 @@
 .header {
   .input-container,
   .button-container {
-    vertical-align: bottom;
 
     @include on-xs-minus {
       font-size: 10px;
